--- a/src/uilt/flimslist.scss
+++ b/src/uilt/flimslist.scss
@@ -5,7 +5,6 @@
   padding-bottom: 49px;
 
   .nowplaying-list {
-
     .van-list {
       margin-left: 15px;
 
@@ -31,6 +30,7 @@
           height: 82px;
           float: left;
           padding: 0 10px;
+          text-align: left;
 
           .uname-item {
             width: 209px;
